# jobs_pipeline

./: .gitignore  main.py  pyproject.toml  requirements.txt  sample.py  test.py
.github/workflows/: run_daily.yml
ai_filters/: company_classifier.py  jd_qualifier.py  web_search.py
config/: cleaner.yml  company_requirements.yml  job_qualification.yml
data_schema/: schema.py
utils/: data_cleaner.py  data_downloader.py  dropbox_uploader.py  refresh_token_generator.py  salesforce_data_dowloader.py
